--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     font-family: "Inter", Roboto, Helvetica, Arial, sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .section {
@@ -21,9 +22,11 @@ body {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-auto-rows: 400px;
     gap: 2em;
     padding: 2em;
+    box-sizing: border-box;
 }
 
 .grid-background-container {
@@ -54,6 +57,7 @@ body {
     top: 1em;
     left: 1em;
     z-index: 1;
+    flex-wrap: wrap;
 }
 
 .labels span {
